trunk/Archive2/02/821471d0b5ef45/output
+ g++ -std=c++11 -O2 -Wall -Wextra -pedantic main.cpp
main.cpp:8:16: error: 'forward' is not a member of 'std'
 AUTO_RETURN(  (std::forward<T1>(t1).*f)(std::forward<Args>(args)...)  )
                ^
main.cpp:1:40: note: in definition of macro 'AUTO_RETURN'
 #define AUTO_RETURN( ... ) -> decltype(__VA_ARGS__) { return (__VA_ARGS__); }
                                        ^
main.cpp:8:41: error: 'forward' is not a member of 'std'
 AUTO_RETURN(  (std::forward<T1>(t1).*f)(std::forward<Args>(args)...)  )
                                         ^
main.cpp:1:40: note: in definition of macro 'AUTO_RETURN'
 #define AUTO_RETURN( ... ) -> decltype(__VA_ARGS__) { return (__VA_ARGS__); }
                                        ^
main.cpp:8:16: error: 'forward' is not a member of 'std'
 AUTO_RETURN(  (std::forward<T1>(t1).*f)(std::forward<Args>(args)...)  )
                ^
main.cpp:1:40: note: in definition of macro 'AUTO_RETURN'
 #define AUTO_RETURN( ... ) -> decltype(__VA_ARGS__) { return (__VA_ARGS__); }
                                        ^
main.cpp:8:31: error: expected primary-expression before '>' token
 AUTO_RETURN(  (std::forward<T1>(t1).*f)(std::forward<Args>(args)...)  )
                               ^
main.cpp:1:40: note: in definition of macro 'AUTO_RETURN'
 #define AUTO_RETURN( ... ) -> decltype(__VA_ARGS__) { return (__VA_ARGS__); }
                                        ^
main.cpp:8:41: error: 'forward' is not a member of 'std'
 AUTO_RETURN(  (std::forward<T1>(t1).*f)(std::forward<Args>(args)...)  )
                                         ^
main.cpp:1:40: note: in definition of macro 'AUTO_RETURN'
 #define AUTO_RETURN( ... ) -> decltype(__VA_ARGS__) { return (__VA_ARGS__); }
                                        ^
main.cpp:8:58: error: expected primary-expression before '>' token
 AUTO_RETURN(  (std::forward<T1>(t1).*f)(std::forward<Args>(args)...)  )
                                                          ^
main.cpp:1:40: note: in definition of macro 'AUTO_RETURN'
 #define AUTO_RETURN( ... ) -> decltype(__VA_ARGS__) { return (__VA_ARGS__); }
                                        ^
main.cpp: In function 'decltype ((<expression error> > *t1.*f)(<erroneous-expression> > args ...)) invoke(F, T1&&, Args&& ...)':
main.cpp:8:16: error: 'forward' is not a member of 'std'
 AUTO_RETURN(  (std::forward<T1>(t1).*f)(std::forward<Args>(args)...)  )
                ^
main.cpp:1:63: note: in definition of macro 'AUTO_RETURN'
 #define AUTO_RETURN( ... ) -> decltype(__VA_ARGS__) { return (__VA_ARGS__); }
                                                               ^
main.cpp:8:31: error: expected primary-expression before '>' token
 AUTO_RETURN(  (std::forward<T1>(t1).*f)(std::forward<Args>(args)...)  )
                               ^
main.cpp:1:63: note: in definition of macro 'AUTO_RETURN'
 #define AUTO_RETURN( ... ) -> decltype(__VA_ARGS__) { return (__VA_ARGS__); }
                                                               ^
main.cpp:8:41: error: 'forward' is not a member of 'std'
 AUTO_RETURN(  (std::forward<T1>(t1).*f)(std::forward<Args>(args)...)  )
                                         ^
main.cpp:1:63: note: in definition of macro 'AUTO_RETURN'
 #define AUTO_RETURN( ... ) -> decltype(__VA_ARGS__) { return (__VA_ARGS__); }
                                                               ^
main.cpp:8:58: error: expected primary-expression before '>' token
 AUTO_RETURN(  (std::forward<T1>(t1).*f)(std::forward<Args>(args)...)  )
                                                          ^
main.cpp:1:63: note: in definition of macro 'AUTO_RETURN'
 #define AUTO_RETURN( ... ) -> decltype(__VA_ARGS__) { return (__VA_ARGS__); }
                                                               ^
main.cpp: At global scope:
main.cpp:14:24: error: 'forward' is not a member of 'std'
 AUTO_RETURN(  (t1->*f)(std::forward<Args>(args)...)  )
                        ^
main.cpp:1:40: note: in definition of macro 'AUTO_RETURN'
 #define AUTO_RETURN( ... ) -> decltype(__VA_ARGS__) { return (__VA_ARGS__); }
                                        ^
main.cpp:14:24: error: 'forward' is not a member of 'std'
 AUTO_RETURN(  (t1->*f)(std::forward<Args>(args)...)  )
                        ^
main.cpp:1:40: note: in definition of macro 'AUTO_RETURN'
 #define AUTO_RETURN( ... ) -> decltype(__VA_ARGS__) { return (__VA_ARGS__); }
                                        ^
main.cpp:14:41: error: expected primary-expression before '>' token
 AUTO_RETURN(  (t1->*f)(std::forward<Args>(args)...)  )
                                         ^
main.cpp:1:40: note: in definition of macro 'AUTO_RETURN'
 #define AUTO_RETURN( ... ) -> decltype(__VA_ARGS__) { return (__VA_ARGS__); }
                                        ^
main.cpp: In function 'decltype (t1->*f(<erroneous-expression> > args ...)) invoke(F, T1, Args&& ...)':
main.cpp:14:24: error: 'forward' is not a member of 'std'
 AUTO_RETURN(  (t1->*f)(std::forward<Args>(args)...)  )
                        ^
main.cpp:1:63: note: in definition of macro 'AUTO_RETURN'
 #define AUTO_RETURN( ... ) -> decltype(__VA_ARGS__) { return (__VA_ARGS__); }
                                                               ^
main.cpp:14:41: error: expected primary-expression before '>' token
 AUTO_RETURN(  (t1->*f)(std::forward<Args>(args)...)  )
                                         ^
main.cpp:1:63: note: in definition of macro 'AUTO_RETURN'
 #define AUTO_RETURN( ... ) -> decltype(__VA_ARGS__) { return (__VA_ARGS__); }
                                                               ^
main.cpp: At global scope:
main.cpp:19:15: error: 'forward' is not a member of 'std'
 AUTO_RETURN(  std::forward<T1>(t1).*f  )
               ^
main.cpp:1:40: note: in definition of macro 'AUTO_RETURN'
 #define AUTO_RETURN( ... ) -> decltype(__VA_ARGS__) { return (__VA_ARGS__); }
                                        ^
main.cpp:19:15: error: 'forward' is not a member of 'std'
 AUTO_RETURN(  std::forward<T1>(t1).*f  )
               ^
main.cpp:1:40: note: in definition of macro 'AUTO_RETURN'
 #define AUTO_RETURN( ... ) -> decltype(__VA_ARGS__) { return (__VA_ARGS__); }
                                        ^
main.cpp:19:30: error: expected primary-expression before '>' token
 AUTO_RETURN(  std::forward<T1>(t1).*f  )
                              ^
main.cpp:1:40: note: in definition of macro 'AUTO_RETURN'
 #define AUTO_RETURN( ... ) -> decltype(__VA_ARGS__) { return (__VA_ARGS__); }
                                        ^
main.cpp: In function 'decltype ((<expression error> > *t1.*f)) invoke(F, T1&&)':
main.cpp:19:15: error: 'forward' is not a member of 'std'
 AUTO_RETURN(  std::forward<T1>(t1).*f  )
               ^
main.cpp:1:63: note: in definition of macro 'AUTO_RETURN'
 #define AUTO_RETURN( ... ) -> decltype(__VA_ARGS__) { return (__VA_ARGS__); }
                                                               ^
main.cpp:19:30: error: expected primary-expression before '>' token
 AUTO_RETURN(  std::forward<T1>(t1).*f  )
                              ^
main.cpp:1:63: note: in definition of macro 'AUTO_RETURN'
 #define AUTO_RETURN( ... ) -> decltype(__VA_ARGS__) { return (__VA_ARGS__); }
                                                               ^
main.cpp: At global scope:
main.cpp:27:36: warning: 'invoke' function uses 'auto' type specifier without trailing return type [enabled by default]
 auto invoke( F&& f, Args&&... args )
                                    ^
main.cpp: In function 'auto invoke(F&&, Args&& ...)':
main.cpp:29:12: error: 'forward' is not a member of 'std'
     return std::forward<F>(f)(std::forward<Args>(args)...);
            ^
main.cpp:29:26: error: expected primary-expression before '>' token
     return std::forward<F>(f)(std::forward<Args>(args)...);
                          ^
main.cpp:29:31: error: 'forward' is not a member of 'std'
     return std::forward<F>(f)(std::forward<Args>(args)...);
                               ^
main.cpp:29:48: error: expected primary-expression before '>' token
     return std::forward<F>(f)(std::forward<Args>(args)...);
                                                ^
